--- a/System_do_zarzadzania_obslugi_sprzedazy/Winows/AddNewSeller.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/Winows/AddNewSeller.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:System_do_zarzadzania_obslugi_sprzedazy.Winows"
         mc:Ignorable="d"
-               Title="AddUser" Height="500" Width="800">
+               Title="Dodawanie Kontrahenta" Height="500" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="97*"/>
